Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -229,7 +229,7 @@ Below figure shows the output of counter with parameterized interface.
 # Modport:
 
 - Modport is used to groups and specifies the port directions to the wires/signals declared within the interface. modports are declared inside the interface with the keyword modport. 
-- modport is an abbreviation for module port.
+- modport is abbreviated as module port.
 
 **Characteristics of modports:**
 
