Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -66,7 +66,9 @@ endmodule
 **output**:-  
 In above code we create a handle h1 for class home and check it is null or not. On the below fig-1 we can see that handle is null. so, we can say that object was not created.
 
--------------------------------------------------------------------------------------
+![handle drawio](https://user-images.githubusercontent.com/110447489/191655831-d94a7d4a-2e56-44ac-add2-f45bb7be3919.png)
+
+
 
 **Github lab link**:  
 **Github logfile link**:  
@@ -128,7 +130,9 @@ endmodule
 **output**:-  
 On below fig-2 we can see that after create an object the memory to a class handle was created so it display object is not empty.  
 
--------------------------------------------------------------------------------------
+![object drawio](https://user-images.githubusercontent.com/110447489/191655979-a0dec2ef-5f5c-46a8-bada-2d96e1970ac2.png)
+
+
 
 **Github lab link**:  
 **Github logfile link**:  
@@ -176,7 +180,9 @@ On above code home is a class. They have properties and method. Then here create
 **output**:-  
 In below fig-3 we see that access the properties and give the value of light = 1 and fan = 1 it print the light is 1 and fan is also 1.
 
--------------------------------------------------------------------------------------
+![class drawio](https://user-images.githubusercontent.com/110447489/191656024-910e7138-3f81-40dc-a4e6-81bc7159c691.png)
+
+
 
 **Github lab link**:  
 **Github logfile link**:  
@@ -222,7 +228,9 @@ From above example we can see that, fan & switch is class properties and argumen
 **output**:-  
 In this code we mention the this keyword before the fan and switch then he print the value switch is ON and fan is also ON inside the class as well as outside the class.
 
-------------------------------------------------------------------------------------
+![this drawio](https://user-images.githubusercontent.com/110447489/191656078-a1ee2923-1e88-4fdc-857c-98a7c07f36ce.png)
+
+
 
 **Github lab link**:  
 **Github logfile link**:  
@@ -262,7 +270,9 @@ endmodule
 **output**:-  
 On the below fig we can see that if we did not mention the this keyword then it display inside method switch is ON that's why fan is ON but outside the class it display the switch is OFF that's why fan is OFF.
 
------------------------------------------------------------------------------------
+![without_this drawio](https://user-images.githubusercontent.com/110447489/191656116-d21a1827-ff3f-4196-a410-372eaf72a5e4.png)
+
+
 
 **Github lab link**:  
 **Github logfile link**:  
@@ -309,7 +319,9 @@ endmodule
 **output**:-  
 On below fig we can see that it display the parent class method and child class method by using the child class handle so it display the switch is ON that's why fan is also ON and it display the single line because here use the $write .
 
----------------------------------------------------------------------------------
+![super drawio](https://user-images.githubusercontent.com/110447489/191656151-7bb84b8b-0b00-461c-90d2-33793020234b.png)
+
+
 
 **Github lab link**:  
 **Github logfile link**:  
@@ -362,7 +374,9 @@ endmodule
 **output**:-  
 Here class method is define the outside the class but after access it by using class handle it display the switch is OFF that's why fan is also OFF.
 
--------------------------------------------------------------------------------------
+![extern drawio](https://user-images.githubusercontent.com/110447489/191656188-e81b3a8e-1bec-4ad2-9fb9-ee81ef40ec74.png)
+
+
 
 **Github lab link**:  
 **Github logfile link**: 
