Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -64,7 +64,7 @@ endmodule
 ```
 
 **output**:-  
-In above code we create a handle h1 for class home and check it is null or not. On the below fig-1 we can see that handle is null. so, we can say that object was not created.
+In above code we create a handle h1 for class home and check it is null or not. On the below fig-1 we can see that it display object is empty. so, we can say that object was not created.
 
 ![handle drawio](https://user-images.githubusercontent.com/110447489/191655831-d94a7d4a-2e56-44ac-add2-f45bb7be3919.png)
 
