Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -228,14 +228,14 @@ Below figure shows the output of counter with parameterized interface.
 
 # Modport:
 
-- Modport is used to groups and specifies the port directions to the wires/signals declared within the interface. modports are declared inside the interface with the keyword modport. 
+- Modport is used to specifies the port directions to the wires/signals declared within the interface. modports are declared inside the interface with the keyword modport. 
 - modport is abbreviated as module port.
 
 **Characteristics of modports:**
 
 * It can have, input, inout and output.
 * By specifying the port directions, modport provides access restrictions for signals.
-* The Interface can have any number of modports, the wire declared in the interface can be grouped in many modports.
+* The Interface can have any number of modports, the signal declared in the interface can be grouped in many modports.
 
 **Syntax:**
 
