Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -881,7 +881,7 @@ instance_name: name of the virtual interface instance can be used in the class w
 
      `Example: function new(virtual intf vif);`  
 
-* The virtual interface can be passed as argument to the function methods
+* The virtual interface can be passed as argument to the function method
 Calling the actual interface 'intf'  to declare the virtual interface in the class using the procedure or in function argument by using  new() construct. 
 
 *  The interface variables can be accessed by  virtual interface handles inside the class function and task methods as **virtual_instance_name.variable**;  
