Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -834,7 +834,34 @@ Class members can be created with the keyword static. class members with the key
 
 The static variable declared inside a class with static keyword shares a single memory location across all class instances.  
 
+**Code Snippet**
 
+    class Mirafra;
+    byte teams;
+    //declare the static property
+    static byte BJT;
+    function new();
+    //incrementing the BJT
+    BJT++;
+    //Assigning static byte to byte
+    teams=BJT;
+    endfunction
+    function void disp();
+    $display("teams=%0d",teams);
+    endfunction
+   endclass
+
+    module static_properties;
+    Mirafra m[4];//declared array of m here
+
+    initial begin
+    foreach(m[i]) begin
+    m[i] = new();
+    $display("contents of teams");
+    m[i].disp();
+    end
+    end
+    endmodule
 
 
 **syntax**  
