Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -228,7 +228,7 @@ Below figure shows the output of counter with parameterized interface.
 
 # Modport:
 
-- Modport is used to specifies the port directions to the wires/signals declared within the interface. modports are declared inside the interface with the keyword modport. 
+- Modport is used to specifies the port directions to the signals declared within the interface. modports are declared inside the interface with the keyword modport. 
 - modport is abbreviated as module port.
 
 **Characteristics of modports:**
