--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -493,6 +493,10 @@ The below figure shows the output of the inside constraint.
 
                               Fig:-9 Output of inside constraint
 
+In the above example, we declared a class in which a random variable is declared as var1.    
+ In this,we are declaring a range by the use of an inside keyword and the range lies between 3 and 9. The random value will be printed between 3 and 9.
+
+
 **GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/inside/inside_const.sv
 
 **GitHub Lab Output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/inside/inside_const.sv.log 
@@ -549,6 +553,9 @@ The below figure shows the output of the inverted inside constraint.
 ![fff-Page-2 drawio](https://user-images.githubusercontent.com/110447788/191229816-41c7a2a5-bb4a-4c2e-be51-ee747a4ea36c.png)
 
                              Fig:-10  Output of inverted inside constraint
+
+In the above example, we declared a class in which a random variable is declared as var2.     
+In this, the random value will be printed that does not lie in range because of use of inside keyword with negation.
 
 **GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/invert_inside/invert_inside.sv
 
@@ -607,8 +614,10 @@ The below figure shows the output of the weighted distribution with := operator.
 
 ![fff-Page-3 drawio](https://user-images.githubusercontent.com/110447788/191230064-f30d3653-31f6-4f48-b3c2-92ddeda93c39.png)
 
-                             Fig-:11 Output of := operator - The  occurrence of '6' is more because '6' has more weight
+                             Fig-:11 Output of := operator 
 
+In the above example, we are using a := operator. In this, the 6 is more weight in comparison to the other ones.    
+The occurrence of 6 is more because 6 is more weight. 
 
 **GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/weight1/weighted_distribution.sv
 
@@ -666,8 +675,11 @@ The below figure shows the output of the weighted distribution with :/ operator.
  
 ![fff-Page-4 drawio](https://user-images.githubusercontent.com/110447788/191232923-542605a3-fe78-4d93-b38f-e3ca2ee6a87d.png)
 
-                         Fig-:12 Output of :/ operator- The occurrence of '6' is more because '6' has more weight
+                         Fig-:12 Output of :/ operator
 
+
+In the above example, we are using a :/ operator in which 6 is the highest weight.    
+In this, The occurrence of '6' is more because '6' has more weight in comparison to others.
 
 **GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/weighted_2/weighted_distribution2.sv
 
@@ -721,6 +733,9 @@ The below figure shows the output of the bidirectional constraint.
 ![fff-Page-5 drawio](https://user-images.githubusercontent.com/110447788/191233065-f717f5f6-9208-4c68-9008-f5f3c9062d3e.png)
 
                                Fig-:13 Output of bidirectional constraint
+
+In the above example, we declared a class in which a random variable is declared as a value1.  
+In this, constraint 1 & 2 limits the value to 7,8,9,10 and 11.
 
 **GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/bidirectional/bidirectional_const.sv
 
@@ -786,6 +801,9 @@ The below figure shows the output of the implication constraint.
 
                             Fig-:14 Output of implication operator
 
+In the above example, the implication operator is used in which we define two random variables value1 and value2.    
+In this, if the value1 lies between the range of 1 and 5 then the value2 is always less than 8.    
+If the value1 does not lie between the range of 1 and 5 then the value2 is always greater than 8.
 
 **GitHub Lab file link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/implication/implication/implication_constraint.sv
 
@@ -844,6 +862,9 @@ The below figure shows the output of the if-else constraint.
 ![fff-Page-6 drawio (2)](https://user-images.githubusercontent.com/110447788/191235603-76cca8e3-926f-49da-ac08-9a18677a563a.png)
 
                                  Fig-:15 Output of if-else constraint
+
+In the above example, we declared a class in which two random variables are declared value1 and value2.    
+If the range lies between 3 and 9 then the value2 will always be 1 and if the range does not lie between the range of 3 and 9 then the value2 always be 0.
 
 **GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/implication/implication_ifelse/implication_ifelse.sv
 
