Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -860,7 +860,7 @@ wave form @negedge clock
 * Clocking block helps the user to write testbenches with higher level of abstraction.   
 * Simulation is more faster.   
 * Separating clocking activities of design from its data assignments activities.    
-* Save amount of code and and time in design execution.  
+* Save amount of code and time in design execution.  
 
 ---
 
