Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -832,7 +832,10 @@ Class members can be created with the keyword static. class members with the key
 
 ## Static Properties
 
-The static variable declared inside a class with static keyword shares a single memory location across all class instances.  
+The static variable declared inside a class with static keyword shares a single memory location across all class instances.
+
+**syntax**  
+`static <data_type> <variable_name>`  
 
 **Code Snippet**
 
@@ -863,10 +866,6 @@ The static variable declared inside a class with static keyword shares a single 
     end
     endmodule
 
-
-**syntax**  
-`static <data_type> <variable_name>`
-
 ## Static Methods
 
 Static methods are the same as static variables that also follow class access rules and scope.
@@ -877,6 +876,30 @@ Both static methods and static members in a class can be accessed without creati
 
 **syntax**  
 `static function <method_name>`
+
+**Code Snippet**
+
+    class Mirafra;
+    static int  team ;
+    function new();
+    //incrementing team
+    team ++;
+    endfunction
+    //declaring static method
+    static function void disp();
+    $display("team=%0d",team);
+    endfunction
+    endclass
+    module static_method;
+    Mirafra m[3];//declaring array
+    initial  begin
+    foreach(m[i])begin
+    m[i]=new;
+    end
+    $display("contents of team");
+    m[2].disp();
+    end
+    endmodule
 
 
 
