Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -866,6 +866,12 @@ The static variable declared inside a class with static keyword shares a single 
     end
     endmodule
 
+**Output**
+
+![static-properties](https://user-images.githubusercontent.com/110509375/191669411-dc98393d-168f-44e2-b181-9a70c45d8157.png)
+
+
+
 ## Static Methods
 
 Static methods are the same as static variables that also follow class access rules and scope.
@@ -902,7 +908,9 @@ Both static methods and static members in a class can be accessed without creati
     endmodule
 
 
+**Output**
 
+![static-method](https://user-images.githubusercontent.com/110509375/191669904-e3690d8f-4576-41b7-9a63-56dd0807487f.png)
 
 # Inheritance 
 
