--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -813,12 +813,13 @@ A function declared with a virtual keyword before the function keyword is referr
 
 ![virtual-function](https://user-images.githubusercontent.com/110509375/191581515-4db81e3d-30be-48a9-9dd4-b242b5a49cfc.png)
 
+             Fig-  output of virtual function
 ## Virtual Task
 
 Task declared with a virtual keyword before the task keyword is referred to as virtual task
  
 
-# OVer-riding Class Members
+# Over-riding Class Members
 Base class or parent class properties and methods can be overridden in the child class or extended class by defining the class properties and methods with the same name as parent class in the child class will override the class members.
 
 To override a method means that given a base class with a method, we can define a subclass which extends from that base class and then provide a new definition for the given method. By default, the subclass inherits the base class implementation of the method but should the programmer decide to change that definition by overriding it - simply listing a new version of that method, then the new version of the method will be used instead of the parent's.
@@ -842,12 +843,15 @@ To override a method means that given a base class with a method, we can define 
 **Output**
 
 ![Untitled Diagram drawio (24)](https://user-images.githubusercontent.com/110509375/191424728-bffbec08-ebde-45c7-ac42-a6225dda6d6f.png)
-
+  
+                        Fig-   output of virtual task
 
 # Static Properties and Methods
 Class members can be created with the keyword static. class members with the keyword static are called as static class members. the class can have static properties and static methods (functions and tasks). a single copy of static variables is shared across multiple instances.
 
 ![Untitled Diagram drawio (25)](https://user-images.githubusercontent.com/110509375/191484831-213dbc2c-1e17-4732-b794-9e8446091446.png)
+
+                            Fig-  static class member  
 
 ## Static Properties
 
@@ -889,6 +893,7 @@ The static variable declared inside a class with static keyword shares a single 
 
 ![static-properties](https://user-images.githubusercontent.com/110509375/191669411-dc98393d-168f-44e2-b181-9a70c45d8157.png)
 
+                   Fig- output of static properties  
 
 
 ## Static Methods
@@ -930,7 +935,8 @@ Both static methods and static members in a class can be accessed without creati
 **Output**
 
 ![static-method](https://user-images.githubusercontent.com/110509375/191669904-e3690d8f-4576-41b7-9a63-56dd0807487f.png)
-
+ 
+                    Fig-    output of static method  
 # Inheritance 
 
 Inheritance is a mechanism which allows child class to inherit the properties of base-class. Objects of child class will have access to attributes and methods of parent class. If child class inherits parent class, then parent class is called **super-class** and child class is called **subclass**. 
@@ -979,14 +985,18 @@ From the above fig-2, we can clearly see that all the instantiation steps are re
   endmodule:inh_sam 
 ```
 
-**Output**:-
+**Output**:-  
+  
+In the code we can see that initially in the class A(parent) we have initialized the value of 'a' with 5 and in class B(child) we are intializing the value of 6 to 'a'.
+In the module we are creating handle 'b1'only for the child class B and we are intialising it with value 10. When we access the parent class method with the help of the child class handle it will display a = 5 and when we access the child class method with the help of the child class handle it will overwrite the value of a=6 with a=10 and displays the output. So we are able to access both the methods just by child class B handle.
 
 ![inh_output_new-Page-3](https://user-images.githubusercontent.com/110398433/191522557-3901a30b-ec83-4259-ad18-e6239d51fb01.jpg)
 
-          Fig-
+          Fig-    output of inheritance  
 
-# Polymorphism
-Polymorphism allows to access the sub-class methods using super-class objects. Any subclass object can be assigned to super-class object. In polymorphism, same handle (or) metthods take different forms.
+# Polymorphism  
+
+Polymorphism allows to access the sub-class methods using super-class objects. Any subclass object can be assigned to super-class object. In polymorphism, same handle (or) methods take different forms.
 
 **code snippet**:-
  ```
@@ -1039,11 +1049,14 @@ Polymorphism allows to access the sub-class methods using super-class objects. A
   endmodule:poly_ex
 ```
 
-**Output**:-
+**Output**:-  
+In this code we can see that the methods of both parent class and child classes are same. So the child class methods will overwrite parent class methods. So we are assigning the child handle 'c' is assigned to parent handle p[0]. So with the help of the p[0] handle we are able to access the child class method. Since it is display function it will print a=3,b=4,e=7. But when we are accessing the class method with the help of handle p[1] it will display the parent class method, that is a =1,b=2 because we did not assign child class handle c to parent class handle p[1]. So here the parent class handle is taking many forms to access child class methods which indeed called *poly* which is many forms in the polymorphism.   
+
+
 
 ![poly-output new-Page-2](https://user-images.githubusercontent.com/110398433/191521797-4fdb4181-8566-4300-a7ca-34b78b984f7d.jpg)
 
-          Fig- 
+          Fig-  output of polymorphism  
 
 # Abstract/Virtual class
 
@@ -1080,11 +1093,14 @@ Abstract class is a virtual class which cannot be instantiated directly in the p
   endmodule:abstract_ex
 ```
 
-**Output**:-
+**Output**:-  
+In the code we can see that initially in the class A(parent) we have initialized the value of 'a' with 5 and in class B(child) we are intializing the value of 6 to 'a'.
+In the module we are creating handle 'b1'only for the child class B and we are intialising it with value 10. When we access the parent class method with the help of the child class handle it will display a = 5 and when we access the child class method with the help of the child class handle it will overwrite the value of a=6 with a=10 and displays the output. So we are able to access both the methods just by child class B handle  
 
 ![abstract-output new](https://user-images.githubusercontent.com/110398433/191521079-4943574c-7576-445f-b785-e7782ce52b8a.png)
 
-          Fig-
+          Fig- output of abstract  
+
 ## Pure virtual method
 
 A **virtual** method inside an abstract class can be declared by keyword **'pure'** and is called **pure virtual** method. The class will automatically consider it as abstract class if any **pure virtual** method is used. It should be only added in the base class. In the base class we are not allowed to add any function definition to the pure virtual function. It is important to know that all the derived classes of a base class with pure virtual methods should have implementation of all pure virtual methods individually.
@@ -1127,10 +1143,11 @@ A **virtual** method inside an abstract class can be declared by keyword **'pure
 ```
  
 **Output**:-
+In the code we can see that initially in a virtual class we will be declaring two methods *function void disp* and *task sum* which we are supposed to be used in our code without defining it. When we inherit class A to B it is important that both the methods(function void disp and task sum) are supposed to be used in the child class B. In the similar fashion if there are more child classes each class is supposed to have both the methods declared individually or else it will throw an error. So in class B we are assiging value of a=10, but since we are not declaring the values of b=0,c=0. In task method we are adding both the values of a and b but we are passing the value of b =35, so we will get a = 10,b=35,c=45.  
 
 ![pvf_new](https://user-images.githubusercontent.com/110398433/191534008-9c6270c5-88ee-4f1e-8ddd-be2978782f74.png)
 
-          Fig-
+          Fig-  output of pure virtual class
 
 # Encapsulation
 
@@ -1139,7 +1156,7 @@ Encapsulation is the technique of hiding data the data within the class and maki
 ![Encap](https://user-images.githubusercontent.com/110398433/191607936-cfdfafbb-6245-436e-82e7-3207cf83cb95.png)
 
 
-          Fig- 
+          Fig-   Type of encapsulation
 
 ## Local
 
@@ -1187,11 +1204,13 @@ A member declared as **'local'** is accessible only to the methods of the same c
    end
   endmodule:encap
 ```
-**Output**:-
+**Output**:-  
+In the code we can see that the local variable c,d declared inside the class is being accessed inside the class. As it is allowed, no compilation error is observed.	
+
 
 ![local_errors_new-Page-2](https://user-images.githubusercontent.com/110398433/191585918-6a6cf5a9-24c8-4e07-839d-0c8831ae7307.jpg)
 
-          Fig-
+          Fig-   output of local encapsulation  
 
 ### Errors expected if we access local variable by child class
 
@@ -1243,10 +1262,12 @@ A member declared as **'local'** is accessible only to the methods of the same c
 
 ```
 **Output**:-  
+In the code we can see that the local variable c,d declared inside the class is trying to access from outside the class by using object handle of child class as well as parent handle p in *module* block. As the variable is declared as local, which leads to a compilation error.   
+
 
 ![local_errors_new drawio](https://user-images.githubusercontent.com/110398433/191592232-6b14be7f-02b7-42e3-b23c-4e777a01aa45.png)
 
-          Fig-
+          Fig- showing error
 
 ## Protected
 
@@ -1298,11 +1319,13 @@ Sometimes there will be necessity to access the members of parent class by the c
 endmodule:prot
 ```
 
-**Output**:-
+**Output**:-  
+In the code we can see that the protected variable c,d declared inside the class is being accessed inside the class. But here since it is *protected* inheritance is also allowed as when we try accessing in child class it will not throw an error. But we try accessing the values c,d in *module* block it will throw an error.
+
 
 ![protected_new](https://user-images.githubusercontent.com/110398433/191599857-a12d87b9-31d7-4a07-8290-0eea7f9a6e70.png)
 
-          Fig-
+          Fig-    output of protected encapsulation  
 
 ## Public
 
@@ -1354,8 +1377,9 @@ By default if we does not define any attributes with keywords **'local'** and **
  endmodule:pub
 ```
 **Output**:-
- 
+ In the code we can see that the variable c,d declared inside the class which is by default *public* is being accessed inside the class.Here inheritance is also allowed as when we try accessing in child class it will not throw an error. When we try accessing the values c,d in *module* block it will not throw an error since it will have full access to all the attributes.  
+
 ![pub_new](https://user-images.githubusercontent.com/110398433/191605847-6dad8ba4-d9ed-4589-9127-4f90e9cc2b18.png)
 
 
-          Fig-
+          Fig-   output of public encapsulation
