--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -70,8 +70,8 @@ In above code we create a handle h1 for class home and check it is null or not. 
 
                     Fig-  output of class handle  
 
-**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class_handle/handle.sv
-**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class_handle/handle.log
+**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class_handle/handle.sv  
+**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class_handle/handle.log   
 
 ## Class constructor:-  
 
@@ -134,8 +134,8 @@ On below fig-2 we can see that after create an object the memory to a class hand
 
                    Fig-  output of class object  
 
-**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class_object/object.sv
-**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class_object/object.log
+**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class_object/object.sv  
+**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class_object/object.log  
 
 
 **Accessing class properties and methods**:-  
@@ -185,8 +185,8 @@ In below fig-3 we see that access the properties and give the value of light = 1
                   Fig-   output of class  
 
 
-**Github lab link**:   https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class/class.sv
-**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class/class.log
+**Github lab link**:   https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class/class.sv  
+**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class/class.log  
 
 ## This keyword:-  
 
@@ -233,8 +233,8 @@ In this code we mention the this keyword before the fan and switch then he print
 
                       Fig-  output of this keyword 
 
-**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/this_keyword/this.sv
-**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/this_keyword/this.log
+**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/this_keyword/this.sv  
+**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/this_keyword/this.log  
 
 **what happens if do not use the this keyword in the above code ?**
 
@@ -275,8 +275,8 @@ On the below fig we can see that if we did not mention the this keyword then it 
 
               Fig-    output of without this keyword  
 
-**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/without_this_keyword/without_this.sv
-**Github logfile link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/without_this_keyword/without_this.log 
+**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/without_this_keyword/without_this.sv  
+**Github logfile link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/without_this_keyword/without_this.log   
 
 ## super keyword:-  
 
@@ -324,8 +324,8 @@ On below fig we can see that it display the parent class method and child class 
 
                   Fig-   output of super keyword
 
-**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/super_keyword/super.sv
-**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/super_keyword/super.log
+**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/super_keyword/super.sv  
+**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/super_keyword/super.log  
 
 ## extern keyword:-  
 
@@ -379,9 +379,9 @@ Here class method is define the outside the class but after access it by using c
 
                  Fig-  output of extern keyword
 
-**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/extern_keyword/extern.sv
-**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/extern_keyword/extern.log
-
+**Github lab link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/extern_keyword/extern.sv   
+**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/extern_keyword/extern.log  
+ 
 
 # Constant-class-properties  
 To make class properties read-only, a const specifier is used. Since class objects are dynamic in nature, SystemVerilog provides two types of constants
@@ -442,8 +442,8 @@ In the below figure you can see that value of b is '1' only because we declared 
  
              Fig-   output of global constant  
 
-**Github lab link**:   https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/constant_variables/global_class/global_class.sv
-**Github logfile link**   https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/constant_variables/global_class/global_class.log     
+**Github lab link**:   https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/constant_variables/global_class/global_class.sv  
+**Github logfile link**   https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/constant_variables/global_class/global_class.log         
   
 ## 2.Instance Constants
 During variable declaration, an initial value is not assigned, such class properties are known as instance constants. An instance constant allows a user to assign value in run time only once in the class constructor.
@@ -496,8 +496,8 @@ endclass
 
                 Fig-    output of Instance Constants  
 
-**Github lab link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/constant_variables/instance_class/instance_class.sv
-**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/constant_variables/instance_class/instance_class.log  
+**Github lab link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/constant_variables/instance_class/instance_class.sv  
+**Github logfile link**:  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/constant_variables/instance_class/instance_class.log   
 
 # parameterized classes
 Parameterized classes are useful when the same class needs to be instantiated differently. The default parameter can be set in the class definition. These parameters can be overridden when it is instantiated.
@@ -545,8 +545,8 @@ endclass
 
                   Fig-     output of parameterized by value  
 
-**Github lab link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/parameterized_classes/parameter_value/parameter_value.sv
-**Github logfile link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/parameterized_classes/parameter_value/parameter_value.log
+**Github lab link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/parameterized_classes/parameter_value/parameter_value.sv  
+**Github logfile link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/parameterized_classes/parameter_value/parameter_value.log  
 
 ## Parameterized by type(datatype)
 Datatype is parameterized in this case and can also be over ridden in instantiated.
@@ -595,8 +595,8 @@ endclass
 
               Fig-     output of parameterized by datatype  
 
-**Github lab link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/parameterized_classes/parameter_datatype/parameter_datatype.sv
-**Github logfile link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/parameterized_classes/parameter_datatype/parameter_datatype.log
+**Github lab link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/parameterized_classes/parameter_datatype/parameter_datatype.sv  
+**Github logfile link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/parameterized_classes/parameter_datatype/parameter_datatype.log  
 
 # Copying Objects
 
@@ -660,8 +660,8 @@ In the above memory allocation we have say that p1 and p2 are sharing same memor
 
                    Fig-    output of class assignment  
 
-**Github lab link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/copying_methods/class_assignment/class_assignment.sv
-**Github logfile link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/copying_methods/class_assignment/class_assignment.log
+**Github lab link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/copying_methods/class_assignment/class_assignment.sv  
+**Github logfile link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/copying_methods/class_assignment/class_assignment.log  
 
 ## 2.Shallow Copy
 
@@ -708,6 +708,8 @@ In the above figure we can that memory allocation in p1 and p2 is same but varia
 
               Fig-    output of shallow copy   
 
+ **Github lab link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/copying_methods/shallow_copy/shallow_copy.sv  
+**Github logfile link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/copying_methods/shallow_copy/shallow_copy.log  
 ## 3.Deep Copy
 
 SystemVerilog deep copy copies all the class members and its nested class members. That means it will copy all the members to a different memory location including the object inside the class. Any change in members of one of the class will have NO impact on another class member.
@@ -762,7 +764,10 @@ In the above figure we can see p1 and p2 has different memories so if change or 
 
 ![Untitled Diagram drawio (17)](https://user-images.githubusercontent.com/110509375/191194036-4e5e28a6-5dba-4aad-8555-72a4cc2d90d3.png)
 
-                 Fig-   output of deep copy
+                 Fig-   output of deep copy  
+
+**Github lab link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/copying_methods/deep_copy/deep_copy.sv  
+**Github logfile link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/copying_methods/deep_copy/deep_copy.log  
 
 # Virtual Methods
 SystemVerilog Methods declared with the keyword virtual are referred to as virtual methods.  
@@ -813,7 +818,11 @@ A function declared with a virtual keyword before the function keyword is referr
 
 ![virtual-function](https://user-images.githubusercontent.com/110509375/191581515-4db81e3d-30be-48a9-9dd4-b242b5a49cfc.png)
 
-             Fig-  output of virtual function
+             Fig-  output of virtual function  
+
+**Github lab link**:
+**Github logfile link**:
+
 ## Virtual Task
 
 Task declared with a virtual keyword before the task keyword is referred to as virtual task
