Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -820,8 +820,8 @@ A function declared with a virtual keyword before the function keyword is referr
 
              Fig-  output of virtual function  
 
-**Github lab link**:
-**Github logfile link**:
+**Github lab link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/virtual_methods/virtual_function.sv  
+**Github logfile link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/virtual_methods/virtual_function.log  
 
 ## Virtual Task
 
@@ -946,6 +946,8 @@ Both static methods and static members in a class can be accessed without creati
 ![static-method](https://user-images.githubusercontent.com/110509375/191669904-e3690d8f-4576-41b7-9a63-56dd0807487f.png)
  
                     Fig-    output of static method  
+**Github Lab link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/static/static_methods/static_method.sv  
+**Github Logfile Link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/static/static_methods/static_method.log
 # Inheritance 
 
 Inheritance is a mechanism which allows child class to inherit the properties of base-class. Objects of child class will have access to attributes and methods of parent class. If child class inherits parent class, then parent class is called **super-class** and child class is called **subclass**. 
